# chemprop-contrib

./: .bumpversion.cfg  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
chemprop_contrib/: __init__.py
chemprop_contrib/mcp/: LICENSE  README.md  __init__.py  _cli.py  args.py  server.py  test_mcp.py  utils.py
chemprop_contrib/mcp/demo/: .gitignore  README.md  baseline_and_llm_opt_conversation.txt  parity.py  prepare_data.py
chemprop_contrib/mcp/demo/baseline/: config.toml
chemprop_contrib/mcp/demo/optuna/: run.sh
chemprop_contrib/mcp/tools/: convert.py  fingerprint.py  hpopt.py  predict.py  train.py
chemprop_contrib/moe_regressor/: README.md  __init__.py  expert_mixture_ffn.py  test_expert_mixture_ffn.py
chemprop_contrib/set2set/: LICENSE  README.md  __init__.py  set2set.py  test_set2set.py
chemprop_contrib/sklearn_integration/: LICENSE  chemprop_estimator.py  chemprop_sklearn_example.ipynb  test_sklearn_integration.py
