[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chemprop-contrib"
description = "Community contributions to chemprop"
version = "2025.11.30"
authors = [
    {name = "The Chemprop Development Team", email="chemprop@mit.edu"},
    {name = "Jackson Burns"},
    {name = "Shih-Cheng Li"},
]
readme = "README.md"
license = {text = "MIT unless otherwise noted in individual contribution files"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "machine learning",
    "property prediction",
    "message passing neural network",
    "graph neural network",
    "drug discovery"
]
requires-python = ">=3.11"
dependencies = [
    "chemprop",
]

[project.optional-dependencies]
mcp =[
    "chemprop>=2.2.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[project.urls]
source = "https://github.com/chemprop/chemprop-contrib"
PyPi = "https://pypi.org/project/chemprop/"

[tool.setuptools.packages.find]
include = ["chemprop_contrib"]
exclude = [".github"]

[project.scripts]
chemprop-mcp = "chemprop_contrib.mcp._cli:main"
